<?xml version="1.0" encoding="utf-8"?>
<com.infinityco.infinitygallery.Objects.HorSwipeAwareRelativeLayout
    android:id="@+id/rlActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.FolderActivity">

    <LinearLayout
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical|left"
                android:orientation="horizontal">


                <RelativeLayout
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="19dp"
                        android:layout_height="19dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/btback"
                        android:gravity="center" />

                    <Button
                        android:id="@+id/btBack"
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:background="#00000000" />


                </RelativeLayout>

                <Button
                    android:id="@+id/btFiles"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:gravity="left|center_vertical"
                    android:singleLine="true"
                    android:text="@string/allowDelete"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorDetailDark"
                    android:textSize="25dp" />

            </LinearLayout>


        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/datail_gradient"
            android:paddingBottom="5dp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:textColor="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/allowDeleteMSG"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                <TextView
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/firstStep"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:textColor="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/allowDelete1step"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="#00ffffff"
                    app:cardElevation="0dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="300dp"
                    android:layout_height="376dp"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/allow_access_first_step"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/secondStep"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:textColor="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/allowDelete2step"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="#00ffffff"
                    app:cardElevation="0dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="300dp"
                    android:layout_height="249dp"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/allow_access_second_step"/>
                </androidx.cardview.widget.CardView>



                <androidx.cardview.widget.CardView
                    android:id="@+id/btAllowDelete"
                    app:cardBackgroundColor="@color/colorDetail"
                    app:cardElevation="0dp"
                    android:layout_marginBottom="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="35dp"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_height="match_parent"
                        android:text="@string/NewVersionDialogButton"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</com.infinityco.infinitygallery.Objects.HorSwipeAwareRelativeLayout>
