<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        card_view:cardCornerRadius="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@drawable/datail_gradient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="7dp"
                    android:text="@string/moveTittle"
                    android:textSize="20dp"
                    android:textColor="#fff"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="7dp"
                android:text="@string/moveMessage"
                android:textSize="15dp"
                android:textColor="#9c9c9c"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:background="#f9f9f9"
                android:layout_below="@+id/Tittle"
                android:layout_width="match_parent"
                android:nestedScrollingEnabled="false"
                android:layout_centerHorizontal="true"
                android:layout_height="220dp" />


            <RelativeLayout
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_alignParentStart="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="#00ffffff"
                        android:text="@string/cancel"
                        android:textColor="#ff1e1e"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:background="#00ffffff"
                        android:layout_centerInParent="true"
                        android:text=""/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_alignParentEnd="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00ffffff"
                        android:layout_centerInParent="true"
                        android:text="@string/newFolder"
                        android:textColor="@color/colorDetailDark"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btNewFolder"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:background="#00ffffff"
                        android:layout_centerInParent="true"
                        android:text="" />
                </RelativeLayout>


            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>