<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        card_view:cardCornerRadius="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@drawable/datail_gradient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="7dp"
                    android:text="@string/options"
                    android:textSize="20dp"
                    android:textColor="#fff"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginTop="5dp"
                    android:background="@drawable/box_layout_collor"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="10dp">

                    <Button

                        android:id="@+id/btEdit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#00000000"/>

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/btedit"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textSize="18dp"
                            android:textColor="@color/colorDetailDark"
                            android:text="@string/edit_photo"/>

                    </LinearLayout>
                </RelativeLayout>



                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:background="@drawable/box_layout_collor"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btSetAs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#00000000"/>

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/btset_as"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textSize="18dp"
                            android:textColor="@color/colorDetailDark"
                            android:text="@string/set_as"/>

                    </LinearLayout>
                </RelativeLayout>


            </LinearLayout>



            <RelativeLayout
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_alignParentStart="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="#00ffffff"
                        android:text="@string/cancel"
                        android:textColor="#ff1e1e"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:background="#00ffffff"
                        android:layout_centerInParent="true"
                        android:text=""/>
                </RelativeLayout>


            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>